force-app/main/default/objects/Account_Relationship__c/Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account Relationship</label>
    <nameField>
        <label>Account Relationships Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>