force-app/main/default/objects/Account_Relationship__c/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquirer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Acquirer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships (Acquirer)</relationshipLabel>
    <relationshipName>Account_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>