force-app/main/default/objects/Account_Relationship__c/fields/Amex_Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Amex_Buy_Rate__c</fullName>
    <description>Cost of Amex, not marked up.</description>
    <inlineHelpText>Cost of Amex, not marked up.</inlineHelpText>
    <label>Amex Buy Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>