force-app/main/default/objects/Account_Relationship__c/fields/Authorization_Transaction_Fee_Cost__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Transaction_Fee_Cost__c</fullName>
    <description>NOT marked-up Authorization / Transaction Fee Cost.</description>
    <inlineHelpText>NOT marked-up Authorization / Transaction Fee Cost.</inlineHelpText>
    <label>Authorization / Transaction Fee Cost</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>