force-app/main/default/objects/Account_Relationship__c/fields/Backend_Processing_Platform__c.field-meta.xml
<CustomField>
    <fullName>Backend_Processing_Platform__c</fullName>
    <label>Backend Processing Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TSYS</fullName>
            </value>
            <value>
                <fullName>Fiserve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>