force-app/main/default/objects/Account_Relationship__c/fields/BIN_Sponsorship_Fee_Cost__c.field-meta.xml
<CustomField>
    <fullName>BIN_Sponsorship_Fee_Cost__c</fullName>
    <label>BIN Sponsorship Fee Cost</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>