force-app/main/default/objects/Account_Relationship__c/fields/CB_Fee_Cost__c.field-meta.xml
<CustomField>
    <fullName>CB_Fee_Cost__c</fullName>
    <description>NOT marked-up cost for CBs.</description>
    <inlineHelpText>NOT marked-up cost for CBs.</inlineHelpText>
    <label>CB Fee Cost</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>