force-app/main/default/objects/Account_Relationship__c/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DBA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>DBA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships (DBA)</relationshipLabel>
    <relationshipName>Account_Relationships5</relationshipName>
    <type>Lookup</type>
</CustomField>