force-app/main/default/objects/Account_Relationship__c/fields/Discount_Rate_Cost__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate_Cost__c</fullName>
    <label>Discount Rate Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>