force-app/main/default/objects/Account_Relationship__c/fields/Funding_Delay__c.field-meta.xml
<CustomField>
    <fullName>Funding_Delay__c</fullName>
    <label>Funding Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Day</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>48 Hours</fullName>
            </value>
            <value>
                <fullName>72 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>