force-app/main/default/objects/Account_Relationship__c/fields/ISO__c.field-meta.xml
<CustomField>
    <fullName>ISO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>ISO</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships (ISO)</relationshipLabel>
    <relationshipName>Account_Relationships3</relationshipName>
    <type>Lookup</type>
</CustomField>