force-app/main/default/objects/Account_Relationship__c/fields/Low_Risk_Split_to_PD__c.field-meta.xml
<CustomField>
    <fullName>Low_Risk_Split_to_PD__c</fullName>
    <label>Low-Risk Split to PD</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>