force-app/main/default/objects/Account_Relationship__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Operating Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships (Referral Partner)</relationshipLabel>
    <relationshipName>Account_Relationships4</relationshipName>
    <type>Lookup</type>
</CustomField>