force-app/main/default/objects/Account_Relationship__c/fields/Related_Acquirer_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Acquirer_Record_Type__c</fullName>
    <formula>Acquirer__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Acquirer Record Type</label>
    <type>Text</type>
</CustomField>