force-app/main/default/objects/Account_Relationship__c/fields/Related_DBA_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_DBA_Record_Type__c</fullName>
    <formula>DBA__r.RecordType.Name</formula>
    <label>Related DBA Record Type</label>
    <type>Text</type>
</CustomField>