force-app/main/default/objects/Account_Relationship__c/fields/Related_ISO_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_ISO_Record_Type__c</fullName>
    <formula>ISO__r.RecordType.Name</formula>
    <label>Related ISO Record Type</label>
    <type>Text</type>
</CustomField>