force-app/main/default/objects/Account_Relationship__c/fields/Related_Legal_Entity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Legal_Entity_Record_Type__c</fullName>
    <formula>Legal_Entity__r.RecordType.Name</formula>
    <label>Related Legal Entity Record Type</label>
    <type>Text</type>
</CustomField>