force-app/main/default/objects/Account_Relationship__c/fields/Related_Primary_ISO_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Primary_ISO_Record_Type__c</fullName>
    <formula>Primary_ISO__r.RecordType.Name</formula>
    <label>Related Primary ISO Record Type</label>
    <type>Text</type>
</CustomField>