force-app/main/default/objects/Account_Relationship__c/fields/Related_Referral_Partner_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Referral_Partner_Record_Type__c</fullName>
    <formula>Referral_Partner__r.RecordType.Name</formula>
    <label>Related Operating Partner Record Type</label>
    <type>Text</type>
</CustomField>