force-app/main/default/objects/Account_Relationship__c/fields/Secondary_ISO__c.field-meta.xml
<CustomField>
    <fullName>Secondary_ISO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary ISO</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>ISO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Relationships (Secondary ISO)</relationshipLabel>
    <relationshipName>Account_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>