force-app/main/default/objects/Account_Relationship__c/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>e-Check</fullName>
            </value>
            <value>
                <fullName>e-Wallet</fullName>
            </value>
            <value>
                <fullName>High-Risk Merchant Account</fullName>
            </value>
            <value>
                <fullName>Low-Risk Merchant Account</fullName>
            </value>
            <value>
                <fullName>Multi Currency</fullName>
            </value>
            <value>
                <fullName>Payment Facilitator</fullName>
            </value>
            <value>
                <fullName>Pinless Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>