force-app/main/default/objects/Account_Relationship__c/fields/Tier_Type__c.field-meta.xml
<CustomField>
    <fullName>Tier_Type__c</fullName>
    <label>Tier/Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Off Shore</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>