force-app/main/default/objects/Account_Relationship__c/recordTypes/Acquirer_to_ISO.recordType-meta.xml
<RecordType>
    <fullName>Acquirer_to_ISO</fullName>
    <active>true</active>
    <label>Acquirer to ISO</label>
</RecordType>