force-app/main/default/objects/Account_Relationship__c/recordTypes/ISO_to_ISO.recordType-meta.xml
<RecordType>
    <fullName>ISO_to_ISO</fullName>
    <active>true</active>
    <label>ISO to ISO</label>
</RecordType>