force-app/main/default/objects/Account_Relationship__c/recordTypes/Referral_Partner_to_DBA.recordType-meta.xml
<RecordType>
    <fullName>Referral_Partner_to_DBA</fullName>
    <active>true</active>
    <label>Operating Partner to DBA</label>
</RecordType>