force-app/main/default/objects/Account_Relationship__c/recordTypes/Referral_Partner_to_Legal_Entity.recordType-meta.xml
<RecordType>
    <fullName>Referral_Partner_to_Legal_Entity</fullName>
    <active>true</active>
    <label>Operating Partner to Legal Entity</label>
</RecordType>