force-app/main/default/objects/Account_Relationship__c/listViews/Acquirer_to_ISO.listView-meta.xml
<ListView>
    <fullName>Acquirer_to_ISO</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account_Relationship__c.Acquirer_to_ISO</value>
    </filters>
    <label>Acquirer to ISO</label>
</ListView>